ConnexoProject/force-app/main/default/objects/Passenger__c/Passenger__c.object-meta.xml
<CustomObject>
    <label>Passenger</label>
    <nameField>
        <displayFormat>CU-{0000}</displayFormat>
        <label>Passenger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passengers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>