ConnexoProject/force-app/main/default/objects/Passenger__c/fields/Any_Onging_Warrant__c.field-meta.xml
<CustomField>
    <fullName>Any_Onging_Warrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Onging Warrant?</label>
    <type>Checkbox</type>
</CustomField>