ConnexoProject/force-app/main/default/objects/Passenger__c/fields/Eligible_for_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Voucher__c</fullName>
    <formula>IF( Age_of_Passenger__c &lt; 18,  IMAGE(&quot;/resource/GreenTick&quot;, &quot;Green&quot;, 30, 30) , IMAGE(&quot;/resource/RedTick&quot;, &quot;Red&quot;, 30, 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Voucher</label>
    <type>Text</type>
</CustomField>