ConnexoProject/force-app/main/default/objects/Passenger__c/fields/Passenger_Email__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Email__c</fullName>
    <label>Passenger Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>