ConnexoProject/force-app/main/default/objects/Passenger__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This is a Phone Field.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>