ConnexoProject/force-app/main/default/objects/Passenger__c/fields/Total_Amount_Spent_on_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Spent_on_Ticket__c</fullName>
    <label>Total Amount Spent on Ticket</label>
    <summarizedField>Book_Flight__c.Ticket_Price__c</summarizedField>
    <summaryForeignKey>Book_Flight__c.Passenger__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>